k8s/app/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - name: http
      port: 8005
      targetPort: http
